[gd_scene load_steps=8 format=3 uid="uid://kpxb3bc4txks"]

[ext_resource type="Script" path="res://src/game.gd" id="1_d6l61"]
[ext_resource type="PackedScene" uid="uid://gph4ll3hdsgo" path="res://src/ui/player_ui.tscn" id="2_1hiie"]
[ext_resource type="Theme" uid="uid://da1qk48nqy3s2" path="res://assets/ui_theme.tres" id="2_t22gp"]
[ext_resource type="Script" path="res://src/level/level.gd" id="4_u2li5"]
[ext_resource type="Resource" uid="uid://c1ejt2h0sn256" path="res://data/level/test_level.tres" id="5_81j2s"]

[sub_resource type="LabelSettings" id="LabelSettings_nljc7"]
font_size = 64
font_color = Color(1, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_2m5h8"]

[node name="Game" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_d6l61")

[node name="UI" type="CanvasLayer" parent="."]

[node name="PlayerUi" parent="UI" instance=ExtResource("2_1hiie")]

[node name="DeathMenu" type="CanvasLayer" parent="."]
process_mode = 3
layer = 10
visible = false

[node name="Container" type="Control" parent="DeathMenu"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="DeathMenu/Container"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0862745, 0.0862745, 0.0862745, 0.933333)

[node name="VBoxContainer" type="VBoxContainer" parent="DeathMenu/Container"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label" type="Label" parent="DeathMenu/Container/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_t22gp")
theme_type_variation = &"HeaderLarge"
text = "You died"
label_settings = SubResource("LabelSettings_nljc7")
horizontal_alignment = 1
vertical_alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="DeathMenu/Container/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_t22gp")

[node name="Button" type="Button" parent="DeathMenu/Container/VBoxContainer/CenterContainer"]
layout_mode = 2
theme = ExtResource("2_t22gp")
text = "Retry"
flat = true

[node name="Debug" type="CanvasLayer" parent="."]
visible = false

[node name="VBoxContainer" type="VBoxContainer" parent="Debug"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ControllerLabel" type="Label" parent="Debug/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_t22gp")
text = "Controller:"
label_settings = SubResource("LabelSettings_2m5h8")

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
handle_input_locally = false
canvas_item_default_texture_filter = 0
size = Vector2i(1920, 1080)
size_2d_override = Vector2i(512, 288)
size_2d_override_stretch = true
render_target_update_mode = 4

[node name="Level" type="Node2D" parent="SubViewportContainer/SubViewport"]
script = ExtResource("4_u2li5")
level_info = ExtResource("5_81j2s")

[connection signal="pressed" from="DeathMenu/Container/VBoxContainer/CenterContainer/Button" to="." method="_restart_game"]
